add dependencies for build.gradle, add colors to values colors.xml, work on toast for manifestButton

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,22 @@
 apply plugin: 'com.android.application'
 
+
 android {
-    compileSdkVersion 25
+    compileSdkVersion 24
     buildToolsVersion "25.0.0"
 
+    useLibrary 'org.apache.http.legacy'
+
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
     defaultConfig {
-        applicationId "com.example.tim.gentleresolve"
+        applicationId "com.epicodus.alcshop"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -21,6 +30,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
