--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'com.android.application'
 
-
 android {
-    compileSdkVersion 24
-    buildToolsVersion "25.0.0"
 
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
     useLibrary 'org.apache.http.legacy'
 
     repositories {
@@ -13,24 +12,41 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.epicodus.alcshop"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        minSdkVersion 15
-        targetSdkVersion 24
+        applicationId "com.epicodus.gentleResolve"
+        minSdkVersion 14
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'MEETUP_API_KEY', apiKey
+    }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    testCompile 'org.robolectric:robolectric:3.0'
+    testCompile 'org.robolectric:shadows-support-v4:3.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
+    androidTestCompile('com.android.support.test:runner:0.3') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
 }
