--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tim.gentleresolve">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -22,16 +22,15 @@
         <activity android:name=".CreateActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.tim.gentleresolve.StartActivity">
-            </meta-data>
+                android:value="com.example.tim.gentleresolve.StartActivity" />
         </activity>
         <activity android:name=".ManifestActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.tim.gentleresolve.ManifestActivity">
-            </meta-data>
+                android:value="com.example.tim.gentleresolve.ManifestActivity" />
         </activity>
-
+        <activity android:name=".FindSupportActivity" />
+        <activity android:name=".ResultsListActivity"></activity>
     </application>
 
 </manifest>
