--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
 
 android {
 
@@ -45,7 +47,8 @@ dependencies {
     compile 'se.akerfeldt:okhttp-signpost:1.1.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile 'org.parceler:parceler-api:1.1.4'
+    apt 'org.parceler:parceler:1.1.4'
 
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2') {
