--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
+    compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.google.firebase:firebase-auth:9.0.2'
     compile 'org.parceler:parceler-api:1.1.4'
     apt 'org.parceler:parceler:1.1.4'
