start to create output on recyclerView for Meetup output from Firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".main_ui.StartActivity">
-            <!--android:theme="@style/StartTheme">-->
+        <activity android:name=".main_ui.StartActivity">
+
+            <!-- android:theme="@style/StartTheme"> -->
         </activity>
         <activity android:name=".main_ui.CreateActivity">
             <meta-data
@@ -29,12 +29,15 @@
         <activity android:name=".main_ui.AchievementsActivity" />
         <activity android:name=".api_ui.ResultsDetailActivity" />
         <activity android:name=".main_ui.LoginActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>/>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            />
         </activity>
-        <activity android:name=".main_ui.CreateAccountActivity"></activity>
+        <activity android:name=".main_ui.CreateAccountActivity" />
+        <activity android:name=".api_ui.SavedMeetupListActivity"></activity>
     </application>
 
 </manifest>
