add new splash screen animation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:icon="@drawable/icon"
         android:label="Gentle Resolve"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
         <activity android:name=".main_ui.StartActivity">
 
             <!-- android:theme="@style/StartTheme"> -->
@@ -30,6 +29,16 @@
         <activity android:name=".main_ui.AchievementsActivity" />
         <activity android:name=".api_ui.ResultsDetailActivity" />
         <activity android:name=".main_ui.LoginActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+            <!--/>-->
+        </activity>
+        <activity android:name=".main_ui.CreateAccountActivity" />
+        <activity android:name=".api_ui.SavedMeetupActivity" />
+        <activity android:name=".main_ui.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,8 +46,6 @@
             </intent-filter>
             />
         </activity>
-        <activity android:name=".main_ui.CreateAccountActivity" />
-        <activity android:name=".api_ui.SavedMeetupActivity"></activity>
     </application>
 
 </manifest>
