remove action bar for splashScreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,13 +38,13 @@
         </activity>
         <activity android:name=".main_ui.CreateAccountActivity" />
         <activity android:name=".api_ui.SavedMeetupActivity" />
-        <activity android:name=".main_ui.SplashScreenActivity">
+        <activity android:name=".main_ui.SplashScreenActivity"
+            android:theme ="@style/StartTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            />
         </activity>
     </application>
 
