achievementsActivity will recieve objects properly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,19 +26,23 @@
         </activity>
         <activity android:name=".api_ui.FindSupportActivity" />
         <activity android:name=".api_ui.ResultsListActivity" />
+        <activity android:name=".main_ui.AchievementsActivity" />
         <activity android:name=".api_ui.ResultsDetailActivity" />
         <activity android:name=".main_ui.LoginActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-            <!--/>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+            <!-- /> -->
         </activity>
         <activity android:name=".main_ui.CreateAccountActivity" />
         <activity android:name=".api_ui.SavedMeetupActivity" />
-        <activity android:name=".main_ui.SplashScreenActivity"
-            android:theme ="@style/StartTheme">
+        <activity
+            android:name=".main_ui.SplashScreenActivity"
+            android:theme="@style/StartTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
